# cj-simulator

./: .gitignore  CONTRIBUTING.md  README.md  claude-context-personal-cj-game-2025-12-01.md  create_gif_from_json.py  index.html  jude-demo.html  pyproject.toml  sprite-editor.html
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml
assets/data/: jude-jump.json  jude-walk.json
src/sprite_animator/: __init__.py  animator.py  cli.py
tests/: validate.js
